<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<!-- it's simple ui in vertical line so
 it's better to change it to linear layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".InstractionsFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/big_shoes"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_32sdp" />

        <TextView
            android:id="@+id/textview_instructions"
            style="@style/WelcomeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/hello_first_fragment"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_64sdp" />

        <TextView
            android:id="@+id/textview_continue"
            style="@style/WelcomeTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/continue_text"
            android:textAlignment="center"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/_17sdp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/button_first"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/next"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_32sdp" />
    </LinearLayout>
</layout>