<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- it's simple ui with ConstraintLayout to make it in flat layer-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="@id/second_guideline"
            app:layout_constraintStart_toStartOf="@id/first_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_tv"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="start"
            android:text="@string/prompt_email"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/username"
            app:layout_constraintStart_toEndOf="@id/first_guideline"
            app:layout_constraintTop_toBottomOf="@id/login_image" />

        <EditText
            android:id="@+id/username"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toBottomOf="@id/email_tv"
            app:layout_constraintEnd_toEndOf="@id/second_guideline"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toTopOf="@id/email_tv"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/password_tv"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/prompt_password"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/first_guideline"
            app:layout_constraintTop_toBottomOf="@id/email_tv" />

        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_Login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toBottomOf="@id/password_tv"
            app:layout_constraintEnd_toEndOf="@id/second_guideline"
            app:layout_constraintStart_toEndOf="@+id/password_tv"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintTop_toTopOf="@id/password_tv"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/login_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/action_Login"
            app:layout_constraintEnd_toEndOf="@id/second_guideline"
            app:layout_constraintStart_toStartOf="@id/first_guideline"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <Button
            android:id="@+id/login_with_existing_account_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/action_Login_with_exciting_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/second_guideline"
            app:layout_constraintStart_toStartOf="@id/first_guideline"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintVertical_bias="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/first_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/second_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>