<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoeData"
            type="com.example.shoeshop.data.model.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@color/first_orange"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/name"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/company"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/company"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />


        <TextView
            android:id="@+id/size"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/size"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/company"
            app:layout_constraintTop_toBottomOf="@id/company" />

        <TextView
            android:id="@+id/desc"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/size"
            app:layout_constraintTop_toBottomOf="@id/size" />

        <TextView
            android:id="@+id/name_txt"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@{shoeData.name}"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/desc"
            app:layout_constraintTop_toTopOf="@id/name" />

        <TextView
            android:id="@+id/company_txt"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@{shoeData.company}"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/desc"
            app:layout_constraintTop_toTopOf="@id/company" />

        <TextView
            android:id="@+id/size_txt"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@{shoeData.size}"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/desc"
            app:layout_constraintTop_toTopOf="@id/size" />

        <TextView
            android:id="@+id/desc_txt"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@{shoeData.description}"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/desc"
            app:layout_constraintTop_toTopOf="@id/desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>